fix: bypass permission issue by calling build script with node

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false npx react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false node ./node_modules/react-scripts/scripts/build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
